# backend/internal/routes/routes.go
@@ -10,4 +10,5 @@ func RegisterRoutes(app *fiber.App) {
 	app.Get("/api", handlers.APIIndex)
 	app.Get("/api/health", handlers.HealthCheck)
 	app.Post("/api/register", handlers.RegisterUser)
+	app.Post("/api/login", handlers.LoginUser)
 }
